--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ pycparser==2.21
 pydeck==0.7.1
 Pygments==2.12.0
 Pympler==1.0.1
-PyMySQL==1.0.2
+PyMySQL
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
@@ -77,7 +77,7 @@ Send2Trash==1.8.0
 six==1.16.0
 smmap==5.0.0
 soupsieve==2.3.2.post1
-SQLAlchemy==1.4.39
+SQLAlchemy
 stack-data==0.3.0
 streamlit==1.11.0
 terminado==0.15.0
